style(theme): Update SSO page icon styling + Update nav bg color

--- a/apps/web/src/connectors/sso.html
+++ b/apps/web/src/connectors/sso.html
@@ -17,7 +17,7 @@
   <body class="layout_frontend">
     <div class="mt-5 d-flex justify-content-center">
       <div>
-        <img src="../images/logo-dark@2x.png" class="mb-4 logo" alt="SaviVault" />
+        <img src="../images/logo-dark@2x.png" class="mb-4 logo w-auto h-auto" alt="SaviVault" />
         <div id="content">
           <p class="text-center">
             <i
